# rhesis-sdk

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml
docs/source/: changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  quickstart.rst  rhesis.entities.rst  rhesis.rst  rhesis.services.rst  rhesis.synthesizers.rst
docs/source/_ext/: fix_entity_docs.py  resolve_types.py
docs/source/changelog/: v0.1.0.rst  v0.1.1.rst  v0.1.2.rst  v0.1.3.rst  v0.1.4.rst  v0.1.5.rst  v0.1.6.rst  v0.1.7.rst  v0.1.8.rst
examples/: README.md  generation.ipynb  testsets.ipynb
src/rhesis/: __init__.py  cli.py  client.py  config.py  utils.py
src/rhesis/entities/: __init__.py  base_entity.py  behavior.py  category.py  prompt.py  status.py  test.py  test_set.py  topic.py
src/rhesis/services/: __init__.py  llm.py
src/rhesis/synthesizers/: __init__.py  base.py  paraphrasing_synthesizer.py  prompt_synthesizer.py
src/rhesis/synthesizers/assets/: paraphrasing_synthesizer.md  prompt_synthesizer.md  test_set_attributes.md
tests/: base_entity_test.py  conftest.py  test_behavior.py  test_topic.py
